--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -382,3 +382,6 @@ bind -T off F12 \
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
+
+# Make ctrl+left/right move by whole words
+set-window-option -g xterm-keys on
